# ViT-scratch

./: README.md  pyproject.toml
notebooks/: encoder_block.ipynb  input_layer.ipynb  mhsa.ipynb  vit.ipynb
src/: utils.py
src/layers/: __init__.py  encoder_block.py  input_layer.py  multi_head_attention.py  vit.py
