[tool.poetry]
name = "vit-scratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "src"}
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "=3.9"
numpy = "=1.21.4"
torch = "=1.12.1"
torchvision = "=0.13.1"


[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.2"
flake8 = "^6.0.0"
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
